# src/Controller/UserController.php
@@ -5,6 +5,7 @@ namespace App\Controller;
 use App\Entity\User;
 use App\Form\Type\UserType;
 use Psr\Http\Message\ServerRequestInterface;
+use Symfony\Component\HttpFoundation\Response;
 use Symfony\Component\Routing\Annotation\Route;
 use Wizards\RestBundle\Controller\JsonControllerTrait;
 use WizardsRest\CollectionManager;
@@ -94,7 +95,7 @@ class UserController extends Controller
      * Create a User.
      *
      * @Route("", methods={"POST"})
-     * 
+     *
      * @SWG\Post(
      *     consumes={"application/vnd.api+json"},
      *     @SWG\Parameter(
@@ -106,7 +107,15 @@ class UserController extends Controller
      *            type="object",
      *            @SWG\Property(property="data",
      *               @SWG\Property(property="type", type="string"),
-     *               @SWG\Property(property="attributes", ref=@Model(type=UserType::class))
+     *               @SWG\Property(property="attributes", ref=@Model(type=UserType::class)),
+     *                  @SWG\Property(property="relationships",
+         *                  @SWG\Property(property="role",
+         *                      @SWG\Property(property="data",
+         *                      @SWG\Property(property="id", type="string", default="1"),
+         *                      @SWG\Property(property="type", type="string", default="roles")
+         *                  )
+     *                  )
+     *              )
      *            )
      *        )
      *     )
@@ -130,17 +139,18 @@ class UserController extends Controller
      */
     public function create(Request $request)
     {
+        $data = $request->getContent();
+        $json = json_decode($data, true);
+        $em = $this->getDoctrine()->getManager();
         $user = new User();
         $form = $this->createForm(UserType::class, $user, ['method' => 'POST']);
         $this->handleJsonForm($form, $request);
+        $user->setRole($em->getRepository('App:UserRole')->findOneById($json['data']['relationships']['role']['data']['id']));
+        $user->setMerchant($em->getRepository('App:Merchant')->findOneById(1));
         $user->setCreatedAt((new \DateTime())->getTimestamp());
-        $em = $this->getDoctrine()->getManager();
         $em->persist($user);
         $em->flush();
 
         return $user;
-
-        $user->setRole($manager->getRepository('App:UserRole')->findOneById($json['data']['relationships']['role']['id']));
-        $user->setMerchant($manager->getRepository('App:Merchant')->findOneById(1));
     }
 }
